# rust-mnist-neural-network

./: .gitignore  Cargo.toml
src/: main.rs
src/neural_network/: matrix.rs  mnist_io.rs  mod.rs  neural_network.rs  parallel_worker.rs
