[package]
name = "neural-network"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
rand = "0.8.4"
crossbeam = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"